err/vexer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/anki'...
Compiling './lib/python3.5/site-packages/anki/__main__.py'...
***   File "./lib/python3.5/site-packages/anki/__main__.py", line 3
    print anki.__all__
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/anki/collection.py'...
***   File "./lib/python3.5/site-packages/anki/collection.py", line 829
    print buf
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/anki/db.py'...
***   File "./lib/python3.5/site-packages/anki/db.py", line 46
    print sql, "%0.3fms" % ((time.time() - t)*1000)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anki/find.py'...
***   File "./lib/python3.5/site-packages/anki/find.py", line 242
    def _findTag(self, (val, args)):
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anki/importing'...
Compiling './lib/python3.5/site-packages/anki/importing/csvfile.py'...
***   File "./lib/python3.5/site-packages/anki/importing/csvfile.py", line 52
    except (csv.Error), e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anki/importing/supermemo_xml.py'...
***   File "./lib/python3.5/site-packages/anki/importing/supermemo_xml.py", line 239
    tags = [ j[0].lower() + j[1:] for j in tmp if j.strip() <> '']
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anki/media.py'...
***   File "./lib/python3.5/site-packages/anki/media.py", line 95
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anki/sound.py'...
***   File "./lib/python3.5/site-packages/anki/sound.py", line 261
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anki/template'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vexer'...
Listing './lib/python3.5/site-packages/vexer/card_creator'...
Compiling './lib/python3.5/site-packages/vexer/card_creator/card_creator.py'...
***   File "./lib/python3.5/site-packages/vexer/card_creator/card_creator.py", line 159
    print '"{}" already in collection. Skipping.'.format(answer)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vexer/dictionary_parser.py'...
***   File "./lib/python3.5/site-packages/vexer/dictionary_parser.py", line 99
    print "{} not found in Dictionary.".format(word)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vexer/vocabulary_creator.py'...
***   File "./lib/python3.5/site-packages/vexer/vocabulary_creator.py", line 114
    print 'Creating config file at {}'.format(get_config_file_path())
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vexer-0.2.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
